# mdl-train-mcp

./: README.md  pyproject.toml
src/mdl_train_mcp/: __init__.py
