[project]
name = "mdl-train-mcp"
version = "0.1.0"
description = "MCP server for monitoring training jobs on Modal — browsable logs, app management, auto-retry on resource limits"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mdl_train_mcp"]

[project.scripts]
mdl-train-mcp = "mdl_train_mcp:main"
